feat: improve transformation pipeline performance using Java 17 idioms
- ConversionProcessorFactory: replace 12-branch if-else chain with switch
  expression on class name; cache processor singletons as static constants
  to eliminate per-call object allocation
- ConversionAnalyzer: replace 12-branch if-else chain in getTypeConversionFunction
  with switch expression on source type name, removing redundant static imports
- ConverterImpl: use identity (==) check first before name comparison to short-circuit
  same-type pass-through without string allocation
- ReflectionUtils: replace AtomicReference allocation in getRealTarget with
  instanceof pattern matching; eliminate redundant isAnnotationPresent call before
  getAnnotation; use instanceof pattern in getGenericClassType; use early-return
  in handleReflectionException
- ClassUtils: replace stream().anyMatch() in isSpecialType/isCustomSpecialType with
  plain for-loops to avoid lambda allocation on type checks; replace LinkedList with
  ArrayList in getMethods for better cache locality; replace collect(toList()) with
  toList() (Java 16) where result is consumed read-only; replace forEach+collect with
  forEach(res::add) in getPrivateFinalFields, getPrivateFields, getMethods
- AbstractTransformer: eliminate stream+lambda in withFieldMapping and
  withFieldTransformer inner loops, replacing with plain for-each
- AbstractBeanTransformer: replace asList+addAll with direct for-each add in
  skipTransformationForField to avoid intermediate List allocation
- MapPopulator: replace keySet().stream().collect(toMap(...)) with entrySet()
  imperative loop and pre-sized HashMap; apply instanceof pattern matching to
  eliminate getClass().equals() calls in isPrimitive and getElemValue

Co-Authored-By: Claude Sonnet 4.6 (1M context) <noreply@anthropic.com>